--- a/Section3_hw02_KierstenH_JillZ_Hoang_DaghanA_v13.Rmd
+++ b/Section3_hw02_KierstenH_JillZ_Hoang_DaghanA_v13.Rmd
@@ -72,22 +72,14 @@ givings$FY16Giving.Grouped <- factor(cut(givings$FY16Giving, breaks=c(0,1,100,25
 ```
 
 ##2.3 Univariate Data Analysis
-We conducted univariate analysis of the following variables:
-
-* FY12 though FY16 Giving (numerical, log transformed and Grouped)
-* Gender
-* Class.Year
-* Marital.Status
-* Major
-* Next.Degree
-* AttendenceEvent
+We conducted univariate analysis for every variable.
 
 ###2.3.1 FY12 though FY16 Giving (Numerical, log transformed, and Grouped)
 We notice that continuous-scale values of the contributions variable have a very strong positive skew (we didn't inlcude this plot due to page limitations). However, at log scale, we observe a bi-modal distribution, with most of the values centered either around 0 or around the $100 range. As noted in the data cleaning section, we transformed the all years' giving variables into a categorical variable. We think this approach is justified because all years exhibit a very strong skew and becasue the log transformation is more difficult to interpret. Binning this variable addressed our concerns and still allows for ease of model interpretation. 
 
 From this univariate analysis alone, we can observe that most years follow a similar pattern - ie. donor behavior seems to be consistent over multiple years. We anticipate that there may be a strong correlation between a donor’s 2016 donation level and their donation in previous years and we will explore this idea during bivariate analysis. This will be important to explore because it would be important to uniquely identify and model donors who consistently make large contributions because the University can use this information to maximize yearly total donations.
 
-```{r fig.height=4.5}
+```{r fig.height=2}
 givings.tidy.donations <- givings[1:12] %>% gather("Giving.Year", "Donations", 8:12)
 givings.tidy.donations$Giving.Grouped <- factor(cut(givings.tidy.donations$Donations, breaks=c(0,1,100,250,500, 200000), 
                                                     labels=c("[0-1)", "[1-100)", "[100-250)","[250-500)","[500-200000)"), right = FALSE))
@@ -103,7 +95,7 @@ p3 <- ggplot(givings.tidy.donations.aggregate, aes(x = Giving.Grouped, y=Freq)) 
   theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
   labs(y = "Donations", x= "Brackets", title = "Contributions over years") +
   theme_bw()
-grid.arrange(p2,p3, ncol=1, nrow=2)
+grid.arrange(p2,p3, ncol=2)
 ```
 
 ###2.3.2 Gender
@@ -175,7 +167,7 @@ We are examined the relationship between the following sets of variables:
 ###2.4.1 FY16Giving.Grouped vs. Gender
 We note two interesting observations in table 1. First, there are more donations in the [$500-$200K) bracket than the [$250-$500) bracket. Furthermore, at $100 donation level or above, men consistently donate more than women do.
 
-```{r fig.height= 3}
+```{r fig.height= 1.5}
 (t1 <- xtabs(~ Gender + FY16Giving.Grouped , data = givings))
 (t1.1 <-round(t1/rowSums(t1),2))
 ```
@@ -212,7 +204,7 @@ Therefore, we've decided to group majors and after considering several ways of d
 We were very careful when deciding the median donation cutoffs used to create the new donation categories of  “No”,“Low”,“Medium”, and “High” donation majors. We made very granular cuts in the median donation (5 dollars increases) in order to optimize our categories. A chart of the distribution of median donations is below. 
 We will use this variable when we estimate our model.
 
-```{r fig.height=2.5}
+```{r fig.height=1.5}
 givings$Last.4Year.Avg<- rowMeans(givings[c("FY12Giving","FY13Giving","FY14Giving","FY15Giving")])
 Major.Index<-data.frame(aggregate(Last.4Year.Avg ~ Major, data = givings,median))
 ggplot(Major.Index, aes(Last.4Year.Avg))+geom_histogram(bins=30)
@@ -246,7 +238,7 @@ Considering the high correlation between the previous years' donation level and 
 
 The following plot shows the effect of 2015 donations and 2014 donations on 2016 donations. The x-axis is 2015 donations. The color shows 2014 donation while the line type shows 2016 donations (different donation levels). The contingency table shows the same information. For example, the actual probability that 2016 donation locates in [0,1) is 0.9 if the alumni neither donated in 2014 nor in 2015. This percentage decreased to 0.6 if this person donated in 2014 even if he didn't donate in 2015. The situation is similar for other year combinations. From both the plot and the contingency table, it seems we should include all of the previous years while estimating our model because every year does provide additional information to make our prediction.
 
-```{r fig.height=4, size = 'tiny'}
+```{r fig.height=3, size = 'tiny'}
 FY_analysis <- function(x,y){
 groups<-aggregate(givings$FY16Giving.Grouped, by=list(givings[,x],givings[,y],givings$FY16Giving.Grouped),"length")
 colnames(groups)<-c("x","y","FY16Giving.Grouped","cnt")
@@ -434,7 +426,7 @@ Because there is good evidence that our addition of 9 explanatory variables (mod
 
 We are aware of the strong correlation between donation levels from 2012 to 2016. However, we've decided to keep them as well for two reasons: 1. They are contributing to the model prediction significnatly(shown by the ANOVA test). 2 The predicted coefficient looks consistent with our observation in EDA. 3 Although a lot of category variables are not signficant in Wald test because of inflated standard error, it doesn't necessary negatively effect the final prediction.
 
-We found that the Class.Year is neither significant in the model nor reports a correct coefficient. On the top of that, in our EDA it is clear that earlier (specially for 1972) graduates is more likely to donate high while the coefficient is showing the opposite, which is very misleading for our model interpretation. The reason for the problem is that Class.Year highly correlated with all the previous donation variables, which increases the standard error (leading to unsatisfactory significance test and incorrect coefficient) and doesn't provide additional information (the model with or without this variable is not significantly different from each other). Considering the poor fit of model.Ha, we removed Class.Year and re-evaluated the model we estimated with the remaining explanatory variables.
+We found that the Class.Year is neither significant in the model nor reports a correct coefficient. On the top of that, in our EDA it is clear that earlier (specially for 1972) graduates is more likely to donate high while the coefficient is showing the opposite, which is very misleading for our model interpretation. The reason for the problem is that Class.Year highly correlated with all the previous donation variables, which increases the standard error (leading to unsatisfactory significance test and incorrect coefficient) and doesn't provide additional information (the model with or without this variable is not significantly different from each other). **Considering the poor fit of model.Ha, we removed Class.Year and re-evaluated the model we estimated with the remaining explanatory variables.**
 
 Our null hypothesis now was that:
 
@@ -445,9 +437,9 @@ model2_Ha <- clm(formula = FY16Giving.Grouped ~ Married + AttendenceEvent + FY15
 summary(model2_Ha)
 anova(model_Ho,model2_Ha)
 AIC(model_Ho, model2_Ha)
+Anova(model2_Ha)
 ```
-
-The estimated model then becomes:
+From the likelihood ratio test, we find that there is strong evidence that association exists for all variables except for AttendenceEvent and Major.Donor.Level. The estimated model then becomes:
 
 $$ logit(\hat{P}(Y\leq j)) = \hat{\beta}_{j0} + \hat{\beta}_{1}Married + \hat{\beta}_{2}Attended + \hat{\beta}_{3}Major.Donation.Level + \hat{\beta}_{4}Adv.Deg + \hat{\beta}_{5}Gender +  \hat{\beta}_{6}FY15Giving.Grouped + \hat{\beta}_{7}FY14Giving.Grouped + \hat{\beta}_{8}FY13Giving.Grouped + \hat{\beta}_{9}FY12Giving.Grouped + \hat{\beta}_{10} $$
 
@@ -455,61 +447,60 @@ where $\hat{beta}_{10} = 2.41, \hat{beta}_{20} = 4.05, \hat{beta}_{30} = 6.49, \
 We test for independence among the variables using the Anova function, with:
 $$H_0 : \beta_2 = \beta_3 = ... \beta_p = 0$$
 $$H_a : any \ \beta_i \neq 0$$
-From the likelihood ratio test, we find that there is strong evidence that association exists for all variables except for AttendenceEvent and Major.Donor.Level.
-
+Finally, we want to investigate the interaction between Gender and Major.Donation.Level that we have identified in section 2.5.2
 ```{r}
-Anova(model2_Ha)
+model3_Ha<- clm(formula = FY16Giving.Grouped ~ Married + AttendenceEvent + FY15Giving.Grouped + Major.Donation.Level+Adv.Deg+
+                   Gender+FY14Giving.Grouped+FY13Giving.Grouped+FY12Giving.Grouped + Gender:Major.Donation.Level,data =givings, link ="logit")
+anova(model_Ho, model2_Ha,model3_Ha)
+AIC(model_Ho, model2_Ha,model3_Ha)
+```
+We note that the interaction term increases AIC and is not supported by the LR independence test. We choose model2_Ha as our final model 
+```{r results='asis'}
+stargazer(model_Ho,model1_Ha,model2_Ha,model3_Ha, star.cutoffs = c(0.05, 0.01, 0.001))
 ```
 
-```{r, results='asis'}
-stargazer(model_Ho,model1_Ha,model2_Ha,star.cutoffs = c(0.05, 0.01, 0.001))
-```
 
-##3.5 Odds Ratios amd their Confidence Intervals
+##3.5 Odds Ratios and their Confidence Intervals
 We derived the confidence intervals for the Odds Ratios to determine the significance and impact of the variables within our model:
 
 ```{r}
 conf.beta <- confint(object = model2_Ha , level = 0.95)
 conf.beta <- as.data.frame.matrix(conf.beta)
 conf.beta[,3]<-model2_Ha$coefficients[5:28];colnames(conf.beta)[3] = "estimated"
-round(conf.beta,2)
 round(exp(conf.beta),2)
 ```
-
-The table above details the range of Odds Ratios for any given variable compared with its base, holding all other variables constant. For example, with 95% confidence* the odds of an alumni donating above a given donation bracket is .72 to 1.36 times when they are married than when they are not. The most notable trend is among the previous Fiscal Year donations, as there are increasing Odds for a donation for alumni who donated in higher donation brackets in previous years. Specifically, we see that if an alumni donated in the highest bracket (500-200000) in FY15, his/her odds of donating above a given bracket are 39 to 417 times compared to if he/she did not donate in FY15. This trend holds true for all previous Fiscal Years, although to a lesser extent the less recent the donation year.
+The table above details the range of Odds Ratios for any given variable compared with its base, holding all other variables constant. For example, with 95% confidence* the odds of an alumni donating above a given donation bracket is .71 to 1.35 times when they are married than when they are not. The most notable trend is among the previous Fiscal Year donations, as there are increasing Odds for a donation for alumni who donated in higher donation brackets in previous years. Specifically, we see that if an alumni donated in the highest bracket (500-200000) in FY15, his/her odds of donating above a given bracket are 38 to 407 times compared to if he/she did not donate in FY15. This trend holds true for all previous Fiscal Years, although to a lesser extent the less recent the donation year.
 
 A few addition variable interpretations:
 
-- The odds of donating above a certain bracket are between .51 to 1.26 times as large when the alumni had a bachelor or equivalent degree versus no advanced degree. This range is reduced to .34 to .89 times as large when the alumni had above a bachelor degree compared to no advanced degree.
-- The odds of donating above a certain bracket are between .85 to 1.54 times as large when the alumni was a male compared to female.
-- The odds of donating above a certain bracket are between .94 and 1.80 times as large when the alumni attended at least one event compared to not attending any events.
-- The odds of donating above a certain bracket are between .74 to 1.40 times as large when the alumni majored in what we categorized as a 'High Donor' major compared to other majors.
+- The odds of donating above a certain bracket are between .51 to 1.25 times as large when the alumni had above a bachelor degree versus having a bachelor degree. This range is reduced to .33 to .87 times as large when the alumni had no additional degree compared to having a bachelor degree.
+- The odds of donating above a certain bracket are between .83 to 1.50 times as large when the alumni was a male compared to female.
+- The odds of donating above a certain bracket are between .93 and 1.79 times as large when the alumni attended at least one event compared to not attending any events.
+- The odds of donating above a certain bracket are between .61 to 3.28 times as large when the alumni majored in what we categorized as a 'High Donation' major compared the no donation major category.
 
 We notice that many of the variables include 1 within the 95% confidence interval. This suggests that there is not sufficient evidence to indicate that these variables increase the odds of donating. However, through our EDA and logical assessment, many of these variables can be key contributers and also add information to other variables in the model, thus we chose to keep them.
 
-*95% confidence is defined in the frequentist perspective, meaning given 100 samples drawn from the same population, we can expect 95 of the samples to have a 95% confidence interval that contains the true population parameter.
-
-##3.7 Model Evaluation
+##3.6 Model Evaluation
 We are going to use a special library to get the residuals (since clm() is not a glm model).
-```{r fig.height= 3.5}
+```{r fig.height= 2}
 p1 <-  autoplot(model2_Ha)
 p2 <-  autoplot(model2_Ha, what='fitted')
 grid.arrange(p1,p2, ncol = 2)
 ```
 We note that the residuals deviate from the Normal at the extremities but remain Normal at the center. While the variance is not fully constant, the shape and spline of the residuals vs. fitted values appear acceptable for our model.
 
-##3.6 Model Fit
+##3.7 Model Fit
 
 We correctly predict 731 out of 1000 samples, so our model is 73% accurate. We are more accurate (90% !) for predicting alumni who won't donate and we are also reasonably accurate at predicting who will donate $500 or more. However, our accuracy for the mid-range of donations is not great.
 
 ```{r}
 #explanatory variables
-var.list <- c("Married","AttendenceEvent","FY15Giving.Grouped","Major.Donation.Level","Adv.Deg","Gender","FY14Giving.Grouped","FY13Giving.Grouped","FY12Giving.Grouped")
+var.list <- c("Class.Year","Married","AttendenceEvent","FY15Giving.Grouped","Major.Donation.Level","Adv.Deg","Gender","FY14Giving.Grouped","FY13Giving.Grouped","FY12Giving.Grouped")
 pred.list<-c("[0-1)","[1-100)","[100-250)","[250-500)","[500-200000)" )
 newData <- unique(givings[,var.list])
-predicts<-cbind(newData, predict(model2_Ha, newdata=newData, type = 'class'))
+predicts<-cbind(newData, predict(model1_Ha, newdata=newData, type = 'class'))
 predicts<- merge(predicts,givings,by=var.list)
-results.t <- xtabs(~ FY16Giving.Grouped, data = predicts[(predicts$fit == predicts$FY16Giving.Grouped),])
+(results.t <- xtabs(~ FY16Giving.Grouped, data = predicts[(predicts$fit == predicts$FY16Giving.Grouped),]))
 round(results.t / xtabs(~ FY16Giving.Grouped, data = givings),2)
 ```
 
